# event-parser

./: .gitignore  BONUS.txt  README.md  pyproject.toml
data/: events.csv
src/: run.py
src/event_parser/: event.py  gender.py  person.py  reader.py
src/tests/: test_event.py  test_gender.py  test_person.py  test_reader.py
src/tests/data/: test_data.csv
