[tool.poetry]
name = "event-parser"
version = "0.1.0"
description = "Simple application for reading dummy user events."
authors = ["Jane Doe"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
